2000-12-05  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/BounceHandler.pm: %args needs to be local so it can be
	shared with the compartment during bounce_rules processing.

	* lib/Mj/Config.pm (parse_bounce_rules): Fix off by one error in
	rule IDs.

	* lib/Mj/List.pm (bounce_gen_stats): Always generate all
	statistics.  

	Computation of consecutive bounce count was badly busted.
	
	* lib/Mj/Config.pm (parse_bounce_rules): The default action is
	'inform', not 'ignore'.

	* lib/Mj/BounceHandler.pm (handle_bounce_user): Import
	'action_terminal' from Mj::CommandProps.

	Since all stats are always generated, don't include some messages
	about statistics when they are meaningless.

	Enable the bounce_rules checking code; include the result in the
	report but don't actually do anything with is.
	
	* lib/Mj/CommandProps.pm: 'remove' is a terminal action.

2000-12-04  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/BounceHandler.pm (handle_bounce_message): Completely
	ignore warning bounces.

	* lib/Mj/CommandProps.pm: Revise actions for bounce_rules.

2000-12-04  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* setup/ask_domain.pl (ask_domain): Make it clear that the
        expected answer to "What is the email address of the
        owner of this Majordomo installation" is not "majordomo-owner".

2000-12-03  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/List.pm (expire_subscriber_data): Bug fix: when all
	bounces expired, all were kept.

2000-12-02  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm (dispatch):  Add simple command mode validation.

	* lib/Mj/List.pm (search):  Allow a count of results desired.

2000-12-01  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MTAConfig.pm (add_alias): Fix bug in VUT owner-list
	entry.

	* lib/Mj/BounceParser.pm (parse_smtp32): Fix possible infloop.

2000-11-25  Michael Yount <csf@moscow.com>

	* setup/newdomain.pl:  Allow domains to be added