@@ -1,3 +1,7 @@
+2000-12-05  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* t/bounce.t: Make sure we process the tests in numerical order.
+
 2000-12-05  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
 
 	* lib/Mj/BounceHandler.pm: %args needs to be local so it can be
